--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -12,6 +12,7 @@
 .titlebar-close > .toolbarbutton-icon, .titlebar-close:hover > .toolbarbutton-icon, .titlebar-close:active > .toolbarbutton-icon, .titlebar-max > .toolbarbutton-icon, .titlebar-max:hover > .toolbarbutton-icon, .titlebar-max:active > .toolbarbutton-icon, .titlebar-min > .toolbarbutton-icon, .titlebar-min:hover > .toolbarbutton-icon, .titlebar-min:active > .toolbarbutton-icon, .titlebar-restore > .toolbarbutton-icon, .titlebar-restore:hover > .toolbarbutton-icon, .titlebar-restore:active > .toolbarbutton-icon{
 	width: fit-content !important;
 	height: fit-content !important;
+	transition: filter 0.1s ease !important;
 }
 
 .titlebar-close > .toolbarbutton-icon{
@@ -20,7 +21,7 @@
 
 .titlebar-close:hover > .toolbarbutton-icon{
 	list-style-image: url("images/aeroCloseHover.png") !important;
-	filter: drop-shadow(0px 0px 5px rgb(255, 50 ,0)) !important;
+	filter: drop-shadow(0px 0px 5px rgb(255, 65, 22)) !important;
 }
 
 .titlebar-close:active > .toolbarbutton-icon{
@@ -28,29 +29,29 @@
 }
 
 .titlebar-max > .toolbarbutton-icon{
-	list-style-image: url("images/aeroMax.png") !important;
+	list-style-image: url("images/aeroMaximize.png") !important;
 }
 
 .titlebar-max:hover > .toolbarbutton-icon{
-	list-style-image: url("images/aeroMaxHover.png") !important;
+	list-style-image: url("images/aeroMaximizeHover.png") !important;
 	filter: drop-shadow(0px 0px 5px rgb(0, 150, 255)) !important;
 }
 
 .titlebar-max:active > .toolbarbutton-icon{
-	list-style-image: url("images/aeroMaxActive.png") !important;
+	list-style-image: url("images/aeroMaximizeActive.png") !important;
 }
 
 .titlebar-min > .toolbarbutton-icon{
-	list-style-image: url("images/aeroMin.png") !important;
+	list-style-image: url("images/aeroMinimize.png") !important;
 }
 
 .titlebar-min:hover > .toolbarbutton-icon{
-	list-style-image: url("images/aeroMinHover.png") !important;
+	list-style-image: url("images/aeroMinimizeHover.png") !important;
 	filter: drop-shadow(0px 0px 5px rgb(0, 150, 255)) !important;
 }
 
 .titlebar-min:active > .toolbarbutton-icon{
-	list-style-image: url("images/aeroMinActive.png") !important;
+	list-style-image: url("images/aeroMinimizeActive.png") !important;
 }
 
 .titlebar-restore > .toolbarbutton-icon{
