--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -1,3 +1,3 @@
-@import url(css/buttons.css);
-@import url(css/transparency.css);
+@import url(buttons.css);
+@import url(transparency.css);
 @import url(userContent.css);
